<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onelinepresident"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ADD8E6">

    <ImageView
        android:id="@+id/ivPresident"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/onePresidentContentDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvRVFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/firstNameHint"
        app:layout_constraintEnd_toStartOf="@+id/tvRVLastName"
        app:layout_constraintStart_toEndOf="@+id/ivPresident"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRVLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:hint="@string/lastNameHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRVServed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="24dp"
        android:hint="@string/servedHint"
        app:layout_constraintStart_toEndOf="@+id/ivPresident"
        app:layout_constraintTop_toBottomOf="@+id/tvRVFirstName" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/ivPresident"
        tools:layout_editor_absoluteX="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>